--- a/README
+++ b/README
@@ -2,12 +2,12 @@ DataparkSearch v.4
 ------------------
 Full featured web search engine
 
-### Please see the file LICENSE for license information
+#### Please see the file LICENSE for license information
 
-### Please see the directory doc for documentation
+#### Please see the directory doc for documentation
 
 
-## Disclaimer (see COPYING for details)
+### Disclaimer (see LICENSE for details)
 
 
 This program is free software; you can redistribute it and/or modify
