--- a/README
+++ b/README
@@ -2,9 +2,7 @@ DataparkSearch v.4
 ------------------
 Full featured web search engine
 
-#### Please see the file LICENSE for license information
-
-#### Please see the directory doc for documentation
+### Please see the directory doc for documentation
 
 
 ### Disclaimer (see LICENSE for details)
